--- a/index.html
+++ b/index.html
@@ -1354,8 +1354,8 @@
 //                w.addEventListener("load", gs, false) :
 //                w.attachEvent("onload", gs);
 //    })(window);
-//    $(".slider7").slider({inEndEffect:'cycle',hasTriggers:false,duration:50000,delay:0,direction:'x',auto:true,immediately:true});
-    $("#returnTop").click(function () {
+    $(".slider7").slider({inEndEffect:'cycle',hasTriggers:false,duration:50000,delay:0,direction:'x',auto:true,immediately:true});
+//    $("#returnTop").click(function () {
         var speed=200;//滑动的速度
         $('body,html').animate({ scrollTop: 0 }, speed);
 
