--- a/index.html
+++ b/index.html
@@ -1355,7 +1355,7 @@
 //                w.attachEvent("onload", gs);
 //    })(window);
     $(".slider7").slider({inEndEffect:'cycle',hasTriggers:false,duration:50000,delay:0,direction:'x',auto:true,immediately:true});
-//    $("#returnTop").click(function () {
+    $("#returnTop").click(function () {
         var speed=200;//滑动的速度
         $('body,html').animate({ scrollTop: 0 }, speed);
 
