--- a/index.html
+++ b/index.html
@@ -312,7 +312,24 @@
                         </div>
                         <img src="images/kangfirst.png" alt="">
                         <img src="images/kangsecond.png" alt="">
-
+                        <img src="images/kangthird.png" alt="">
+                        <img src="images/kangfour1.png" alt="">
+                        <img src="images/kangfour2.png" alt="">
+                        <img src="images/kangfith.png" alt="">
+                        <img src="images/kangsix1.png" alt="">
+                        <img src="images/kangsix2.png" alt="">
+                        <img src="images/kangsix3.png" alt="">
+                        <img src="images/kangsevent1.png" alt="">
+                        <img src="images/kangsevent2.png" alt="">
+                        <img src="images/kangsevent3.png" alt="">
+                        <img src="images/kangsvent4.png" alt="">
+                        <img src="images/kangsenent5.png" alt="">
+                        <img src="images/eight.png" alt="">
+                        <img src="images/ninth.png" alt="">
+                        <img src="images/ninth1.png" alt="">
+                        <img src="images/ninth3.png" alt="">
+                        <img src="images/ninth4.png" alt="">
+                        <img src="images/ninth5.png" alt="">
                         <div class="row">
                             <figure class="js-slide">
                                 <!--<noscript> &lt;img src="//cdn.sanscolour.com/aker-brygge/10-small.jpg" alt="Aker Brygge-->
