--- a/index.html
+++ b/index.html
@@ -330,217 +330,27 @@
                         <img src="images/ninth3.png" alt="">
                         <img src="images/ninth4.png" alt="">
                         <img src="images/ninth5.png" alt="">
-                        <div class="row">
-                            <figure class="js-slide">
-                                <!--<noscript> &lt;img src="//cdn.sanscolour.com/aker-brygge/10-small.jpg" alt="Aker Brygge-->
-                                    <!--— Logotype &amp; the main street Stranden."&gt; </noscript>-->
-                                <!--<img src="./10-large.jpg"-->
-                                     <!--data-src="//cdn.sanscolour.com/images/projects/aker-brygge/10-small.jpg"-->
-                                     <!--alt="Aker Brygge — Logotype &amp; the main street Stranden. Design by Sans Colour."-->
-                                     <!--class="fs-img project__img fs-standard-resolution fs-src-find-replace"-->
-                                     <!--data-width="1800" data-height="900" style="display: inline;">-->
-                                <!--<figcaption class="project__image-caption">Aker Brygge logotype &amp; the main street-->
-                                    <!--‘Stranden’-->
-                                <!--</figcaption>-->
-                            </figure>
-                        </div>
-                        <!--<div class="row row&#45;&#45;multi-col js-slide">-->
-                            <!--<div class="col col&#45;&#45;1-2">-->
-                                <!--<figure>-->
-                                    <!--<noscript> &lt;img-->
-                                        <!--src="//cdn.sanscolour.com/images/projects/aker-brygge/02-small.jpg" alt="Aker-->
-                                        <!--Brygge — Logotype."&gt; </noscript>-->
-                                    <!--<img src="./02-large.jpg"-->
-                                         <!--data-src="//cdn.sanscolour.com/images/projects/aker-brygge/02-small.jpg"-->
-                                         <!--alt="Aker Brygge — Logotype. Design by Sans Colour."-->
-                                         <!--class="fs-img project__img fs-standard-resolution fs-src-find-replace"-->
-                                         <!--data-width="880" data-height="650" style="display: inline;">-->
-                                    <!--<figcaption class="project__image-caption">Aker Brygge logotype</figcaption>-->
-                                <!--</figure>-->
-                            <!--</div>-->
-                            <!--<div class="col col&#45;&#45;1-2">-->
-                                <!--<figure>-->
-                                    <!--<noscript> &lt;img-->
-                                        <!--src="//cdn.sanscolour.com/images/projects/aker-brygge/03-small.jpg" alt="Aker-->
-                                        <!--Brygge — Business Village logotype."&gt; </noscript>-->
-                                    <!--<img src="./03-large.jpg"-->
-                                         <!--data-src="//cdn.sanscolour.com/images/projects/aker-brygge/03-small.jpg"-->
-                                         <!--alt="Aker Brygge — Business Village logotype. Design by Sans Colour."-->
-                                         <!--class="fs-img project__img fs-standard-resolution fs-src-find-replace"-->
-                                         <!--data-width="880" data-height="650" style="display: inline;">-->
-                                    <!--<figcaption class="project__image-caption">Aker Brygge Business Village logotype-->
-                                    <!--</figcaption>-->
-                                <!--</figure>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                        <!--<div class="row">-->
-                            <!--<figure class="js-slide">-->
-                                <!--<noscript> &lt;img src="//cdn.sanscolour.com/aker-brygge/04-small.jpg" alt="Aker Brygge-->
-                                    <!--— Business cards + holder."&gt; </noscript>-->
-                                <!--<img src="./04-large.jpg"-->
-                                     <!--data-src="//cdn.sanscolour.com/images/projects/aker-brygge/04-small.jpg"-->
-                                     <!--alt="Aker Brygge — Business cards + holder. Design by Sans Colour."-->
-                                     <!--class="fs-img project__img fs-standard-resolution fs-src-find-replace"-->
-                                     <!--data-width="1800" data-height="1000" style="display: inline;"></figure>-->
-                        <!--</div>-->
-                        <!--<div class="row">-->
-                            <!--<figure class="js-slide">-->
-                                <!--<noscript> &lt;img src="//cdn.sanscolour.com/aker-brygge/05-small.jpg" alt="Aker Brygge-->
-                                    <!--— Various retail promotional material and stationery."&gt; </noscript>-->
-                                <!--<img src="./05-large.jpg"-->
-                                     <!--data-src="//cdn.sanscolour.com/images/projects/aker-brygge/05-small.jpg"-->
-                                     <!--alt="Aker Brygge — Various retail promotional material and stationery. Design by Sans Colour."-->
-                                     <!--class="fs-img project__img fs-standard-resolution fs-src-find-replace"-->
-                                     <!--data-width="1800" data-height="1200" style="display: inline;"></figure>-->
-                        <!--</div>-->
-                        <!--<div class="row">-->
-                            <!--<figure class="js-slide">-->
-                                <!--<noscript> &lt;img src="//cdn.sanscolour.com/aker-brygge/06-small.jpg" alt="Aker Brygge-->
-                                    <!--— Art direction."&gt; </noscript>-->
-                                <!--<img src="./06-large.jpg"-->
-                                     <!--data-src="//cdn.sanscolour.com/images/projects/aker-brygge/06-small.jpg"-->
-                                     <!--alt="Aker Brygge — Art direction. Design by Sans Colour."-->
-                                     <!--class="fs-img project__img fs-standard-resolution fs-src-find-replace"-->
-                                     <!--data-width="1800" data-height="900" style="display: inline;"></figure>-->
-                        <!--</div>-->
-                        <!--<div class="row">-->
-                            <!--<figure class="js-slide">-->
-                                <!--<noscript> &lt;img src="//cdn.sanscolour.com/aker-brygge/07-small.jpg" alt="Aker Brygge-->
-                                    <!--— Close Up button."&gt; </noscript>-->
-                                <!--<img src="./07-large.jpg"-->
-                                     <!--data-src="//cdn.sanscolour.com/images/projects/aker-brygge/07-small.jpg"-->
-                                     <!--alt="Aker Brygge — Close Up button. Design by Sans Colour."-->
-                                     <!--class="fs-img project__img fs-standard-resolution fs-src-find-replace"-->
-                                     <!--data-width="1800" data-height="1100" style="display: inline;"></figure>-->
-                        <!--</div>-->
-                        <!--<div class="row">-->
-                            <!--<figure class="js-slide">-->
-                                <!--<noscript> &lt;img src="//cdn.sanscolour.com/aker-brygge/08-small.jpg" alt="Aker Brygge-->
-                                    <!--— Promotional retail book."&gt; </noscript>-->
-                                <!--<img src="./08-large.jpg"-->
-                                     <!--data-src="//cdn.sanscolour.com/images/projects/aker-brygge/08-small.jpg"-->
-                                     <!--alt="Aker Brygge — Promotional retail book. Design by Sans Colour."-->
-                                     <!--class="fs-img project__img fs-standard-resolution fs-src-find-replace"-->
-                                     <!--data-width="1800" data-height="1200" style="display: inline;"></figure>-->
-                        <!--</div>-->
-                        <!--<div class="row">-->
-                            <!--<figure class="js-slide">-->
-                                <!--<noscript> &lt;img src="//cdn.sanscolour.com/aker-brygge/11-small.jpg" alt="Aker Brygge-->
-                                    <!--— Stationery, promotional retail book + box, bookmarks, custom made leather lap top-->
-                                    <!--cover."&gt; </noscript>-->
-                                <!--<img src="./11-large.jpg"-->
-                                     <!--data-src="//cdn.sanscolour.com/images/projects/aker-brygge/11-small.jpg"-->
-                                     <!--alt="Aker Brygge — Stationery, promotional retail book + box, bookmarks, custom made leather lap top cover. Design by Sans Colour."-->
-                                     <!--class="fs-img project__img fs-standard-resolution fs-src-find-replace"-->
-                                     <!--data-width="1800" data-height="1428" style="display: inline;"></figure>-->
-                        <!--</div>-->
                     </div>
                 </div>
                 <div id="block--akerBryggeDisplay" class="js-block block project project--akerBryggeDisplay"
                      data-block-id="akerBryggeDisplay">
-                    <div class="project-content">
-                        <div class="js-slide"><h2 class="project-title">Aker Brygge Display</h2>
-                            <p class="project-description">Aker Brygge Display is a bespoke typeface made for the Aker
-                                Brygge identity. Designed in collaboration with type designer Stefan Ellmer and Dag
-                                Laska.</p>
-                            <p class="milli project-awards">NOMINATED IN TYPOGRAPHY CATEGORY AT VISUELT 2012.</p>
-                            <div class="project-details">
-                                <div class="project-details__item"><p class="milli"><span
-                                        class="project-details__item__label">MADE AT</span> <span
-                                        class="project-details__item__value"> <a href="http://www.bleed.no/"
-                                                                                 class="project-details__link"
-                                                                                 target="_blank"> <span>BLEED</span>
-                                </a> </span></p></div>
-                                <div class="project-details__item"><p class="milli"><span
-                                        class="project-details__item__label">Creative Director</span> <span
-                                        class="project-details__item__value"> DAG LASKA </span></p></div>
-                                <div class="project-details__item"><p class="milli"><span
-                                        class="project-details__item__label">Designer</span> <span
-                                        class="project-details__item__value"> MIRIAM SKOVHOLT MORTENSEN </span></p>
-                                </div>
-                                <div class="project-details__item"><p class="milli"><span
-                                        class="project-details__item__label">Type Designer</span> <span
-                                        class="project-details__item__value"> <a href="http://www.ellmerstefan.net/"
-                                                                                 class="project-details__link"
-                                                                                 target="_blank">
-                                    <span>STEFAN ELLMER</span> </a> </span></p></div>
-                            </div>
+                    <div class="project-content" style="background-color:#ffffff">
+                        <div class="js-slide" style="overflow: hidden">
+                            <h1 class="project-firsttitle">Simple insurance</h1>
+                            <h2 class="project-title">简单保险</h2>
+                            <p class="project-description">“简单保险”APP是互联网保险第三方服务平台，以提升保险服务体验为目标，为客户提供“方便、快捷、省钱、省心”的互联网保险服务。简单保险目前已经和华安财产保险股份有限公司、锦泰财产保险股份有限公司建立合作关系。客户可以通过APP完成车险、意外险、责任险的在线购买。</p>
                         </div>
-                        <div class="row">
-                            <figure class="js-slide">
-                                <noscript> &lt;img src="//cdn.sanscolour.com/aker-brygge-display/10-small.gif" alt="Aker
-                                    Brygge Display — Aker Brygge Display is a bespoke typeface designed for Aker
-                                    Brygge."&gt; </noscript>
-                                <img src="./10-large.gif"
-                                     data-src="//cdn.sanscolour.com/images/projects/aker-brygge-display/10-small.gif"
-                                     alt="Aker Brygge Display — Aker Brygge Display is a bespoke typeface designed for Aker Brygge. Design by Sans Colour."
-                                     class="fs-img project__img fs-standard-resolution fs-src-find-replace"
-                                     data-width="1800" data-height="1080" style="display: inline;"></figure>
-                        </div>
-                        <div class="row">
-                            <figure class="js-slide">
-                                <noscript> &lt;img src="//cdn.sanscolour.com/aker-brygge-display/11-small.gif" alt="Aker
-                                    Brygge Display — A-Ö."&gt; </noscript>
-                                <img src="./11-large.gif"
-                                     data-src="//cdn.sanscolour.com/images/projects/aker-brygge-display/11-small.gif"
-                                     alt="Aker Brygge Display — A-Ö. Design by Sans Colour."
-                                     class="fs-img project__img fs-standard-resolution fs-src-find-replace"
-                                     data-width="1800" data-height="1080" style="display: inline;"></figure>
-                        </div>
-                        <div class="row">
-                            <figure class="js-slide">
-                                <noscript> &lt;img src="//cdn.sanscolour.com/aker-brygge-display/12-small.gif" alt="Aker
-                                    Brygge Display — Ligatures."&gt; </noscript>
-                                <img src="./12-large.gif"
-                                     data-src="//cdn.sanscolour.com/images/projects/aker-brygge-display/12-small.gif"
-                                     alt="Aker Brygge Display — Ligatures. Design by Sans Colour."
-                                     class="fs-img project__img fs-standard-resolution fs-src-find-replace"
-                                     data-width="1800" data-height="900" style="display: inline;">
-                                <figcaption class="project__image-caption">Ligatures</figcaption>
-                            </figure>
-                        </div>
-                        <div class="row">
-                            <figure class="js-slide">
-                                <noscript> &lt;img src="//cdn.sanscolour.com/aker-brygge-display/13-small.gif" alt="Aker
-                                    Brygge Display — Numerals!"&gt; </noscript>
-                                <img src="./13-large.gif"
-                                     data-src="//cdn.sanscolour.com/images/projects/aker-brygge-display/13-small.gif"
-                                     alt="Aker Brygge Display — Numerals! Design by Sans Colour."
-                                     class="fs-img project__img fs-standard-resolution fs-src-find-replace"
-                                     data-width="1800" data-height="1200" style="display: inline;"></figure>
-                        </div>
-                        <div class="row">
-                            <figure class="js-slide">
-                                <noscript> &lt;img src="//cdn.sanscolour.com/aker-brygge-display/14-small.gif" alt="Aker
-                                    Brygge Display — In use with ligatures."&gt; </noscript>
-                                <img src="./14-large.gif"
-                                     data-src="//cdn.sanscolour.com/images/projects/aker-brygge-display/14-small.gif"
-                                     alt="Aker Brygge Display — In use with ligatures. Design by Sans Colour."
-                                     class="fs-img project__img fs-standard-resolution fs-src-find-replace"
-                                     data-width="1800" data-height="1000" style="display: inline;"></figure>
-                        </div>
-                        <div class="row">
-                            <figure class="js-slide">
-                                <noscript> &lt;img src="//cdn.sanscolour.com/aker-brygge-display/15-small.gif" alt="Aker
-                                    Brygge Display — Quote (Mogwai)."&gt; </noscript>
-                                <img src="./15-large.gif"
-                                     data-src="//cdn.sanscolour.com/images/projects/aker-brygge-display/15-small.gif"
-                                     alt="Aker Brygge Display — Quote (Mogwai). Design by Sans Colour."
-                                     class="fs-img project__img fs-standard-resolution fs-src-find-replace"
-                                     data-width="1800" data-height="1200" style="display: inline;"></figure>
-                        </div>
-                        <div class="row">
-                            <figure class="js-slide">
-                                <noscript> &lt;img src="//cdn.sanscolour.com/aker-brygge-display/16-small.gif" alt="Aker
-                                    Brygge Display — Quote (Dag Hammarskjöld)."&gt; </noscript>
-                                <img src="./16-large.gif"
-                                     data-src="//cdn.sanscolour.com/images/projects/aker-brygge-display/16-small.gif"
-                                     alt="Aker Brygge Display — Quote (Dag Hammarskjöld). Design by Sans Colour."
-                                     class="fs-img project__img fs-standard-resolution fs-src-find-replace"
-                                     data-width="1800" data-height="1200" style="display: inline;"></figure>
-                        </div>
+                        <img src="images/bao1.png" alt="">
+                        <img src="images/bao2.png" alt="">
+                        <img src="images/bao3.png" alt="">
+                        <img src="images/bao4.png" alt="">
+                        <img src="images/bao5.png" alt="">
+                        <img src="images/bao6.png" alt="">
+                        <img src="images/bao7.png" alt="">
+
+
+
                     </div>
-                </div>
                 <div id="block--norwegian-ambassador" class="js-block block project project--norwegian-ambassador"
                      data-block-id="norwegian-ambassador">
                     <div class="project-content">
