--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <span class="project-list__item__title">页首</span>
                     </li>
                     <li id="project-list__item--akerBrygge" class="project-list__item" data-block-id="akerBrygge">
-                        <span class="project-list__item__title">理疗会所管理SASS平台</span>
+                        <span class="project-list__item__title">理疗会所管理SASSp平台</span>
                     </li>
                     <li id="project-list__item--akerBryggeDisplay" class="project-list__item"
                         data-block-id="akerBryggeDisplay">
@@ -347,10 +347,8 @@
                         <img src="images/bao5.png" alt="">
                         <img src="images/bao6.png" alt="">
                         <img src="images/bao7.png" alt="">
-
-
-
                     </div>
+                </div>
                 <div id="block--norwegian-ambassador" class="js-block block project project--norwegian-ambassador"
                      data-block-id="norwegian-ambassador">
                     <div class="project-content">
