--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                         <div class="js-slide" style="overflow: hidden">
                             <h1 class="project-firsttitle">Farmers mall </h1>
                             <h2 class="project-title">农贸商城</h2>
-                            <p class="project-description">农产品电子商务交易平台，农业产品交易者乐园，农业产品采购商的不二选择，农业产品生产者的盈利引擎。致力于打造农业产品的生产、检验</p>
+                            <p class="project-description">农产品电子商务交易平台，农业产品交易者乐园，农业产品采购商的不二选择，农业产品生产者的盈利引擎。致力于打造农业产品的生产、检验、仓储、运输、金融、交易等，一整套行业解决方案。</p>
                         </div>
                         <img src="images/mall1.png" alt="">
                         <img src="images/mall2.png" alt="">
