--- a/index.html
+++ b/index.html
@@ -370,27 +370,6 @@
 
                     </div>
                 </div>
-                <!--<div id="block&#45;&#45;andreas-kleiberg" class="js-block block project project&#45;&#45;andreas-kleiberg"-->
-                     <!--data-block-id="andreas-kleiberg">-->
-                    <!--<div class="project-content" style="background-color:#ffffff">-->
-                        <!--<div class="js-slide" style="overflow: hidden">-->
-                            <!--<h1 class="project-firsttitle">Car repair</h1>-->
-                            <!--<h2 class="project-title">修车宝</h2>-->
-                            <!--<p class="project-description">修车宝是一款是一款汽车修理保险服务类软件，非常便捷的维修管理，帮助4S店维护和开拓客户，帮助提升车主的保险理赔和车辆维修服务体验的“送修管理神器”。保险公司定损员借助APP完成送修动作，保险公司随时掌握事故车送修资源的流向，对定损员的送修行为实时监控，有效加强保险公司对送修资源的掌控能力。</p>-->
-                        <!--</div>-->
-                        <!--<img src="images/car1.png" alt="">-->
-                        <!--<img src="images/car2.png" alt="">-->
-                        <!--<img src="images/car3.png" alt="">-->
-                        <!--<img src="images/car4.png" alt="">-->
-                        <!--<img src="images/car5.png" alt="">-->
-                        <!--<img src="images/car6.png" alt="">-->
-                        <!--<img src="images/car7.png" alt="">-->
-                        <!--<img src="images/car8.png" alt="">-->
-                        <!--<img src="images/car9.png" alt="">-->
-                        <!--<img src="images/car10.png" alt="">-->
-
-                    <!--</div>-->
-                <!--</div>-->
                 <div id="block--alu-mind" class="js-block block project project--alu-mind" data-block-id="alu-mind">
                     <div class="project-content" style="background-color:#ffffff">
                         <div class="js-slide" style="overflow: hidden">
@@ -429,69 +408,30 @@
                     </div>
                 </div>
                 <div id="block--aspiro" class="js-block block project project--aspiro" data-block-id="aspiro">
-                    <div class="project-content">
-                        <div class="js-slide"><h2 class="project-title">Aspiro</h2>
-                            <p class="project-description">Design and concept sketches for Aspiro's streaming and video
-                                ‘on demand’ services. Presented at Mobile World Congress in Barcelona 2013.</p>
-                            <div class="project-details">
-                                <div class="project-details__item"><p class="milli"><span
-                                        class="project-details__item__label">MADE AT</span> <span
-                                        class="project-details__item__value"> <a href="http://www.bleed.no/"
-                                                                                 class="project-details__link"
-                                                                                 target="_blank"> <span>BLEED</span>
-                                </a> </span></p></div>
-                            </div>
+                    <div class="project-content" style="background-color:#ffffff">
+                        <div class="js-slide" style="overflow: hidden">
+                            <h1 class="project-firsttitle">Clinic management software</h1>
+                            <h2 class="project-title">诊所管理SAAS平台</h2>
+                            <p class="project-description">领先的互联网基层医疗诊所管理软件，为全国基层医疗机构提供最具价值的医疗信息服务 。专注于医疗软件的研发推动医疗保健、卫生管理为己任， 提供一站式信息化诊疗服务。适合个体诊所、乡村卫生室、连锁诊所、卫生服务站等基层医务人员工作模式和特点的经营管理系统。</p>
                         </div>
-                        <div class="row">
-                            <figure class="js-slide">
-                                <noscript> &lt;img src="//cdn.sanscolour.com/aspiro/01-small.jpg" alt="Aspiro —
-                                    Frontpage."&gt; </noscript>
-                                <img src="./01-large(3).jpg"
-                                     data-src="//cdn.sanscolour.com/images/projects/aspiro/01-small.jpg"
-                                     alt="Aspiro — Frontpage. Design by Sans Colour."
-                                     class="fs-img project__img fs-standard-resolution fs-src-find-replace"
-                                     data-width="1800" data-height="1200" style="display: inline;"></figure>
-                        </div>
-                        <div class="row">
-                            <figure class="js-slide">
-                                <noscript> &lt;img src="//cdn.sanscolour.com/aspiro/02-small.jpg" alt="Aspiro — Live
-                                    TV."&gt; </noscript>
-                                <img src="./02-large(4).jpg"
-                                     data-src="//cdn.sanscolour.com/images/projects/aspiro/02-small.jpg"
-                                     alt="Aspiro — Live TV. Design by Sans Colour."
-                                     class="fs-img project__img fs-standard-resolution fs-src-find-replace"
-                                     data-width="1800" data-height="1200" style="display: inline;"></figure>
-                        </div>
-                        <div class="row">
-                            <figure class="js-slide">
-                                <noscript> &lt;img src="//cdn.sanscolour.com/aspiro/03-small.jpg" alt="Aspiro — Stream
-                                    of Activity from friends."&gt; </noscript>
-                                <img src="./03-large(4).jpg"
-                                     data-src="//cdn.sanscolour.com/images/projects/aspiro/03-small.jpg"
-                                     alt="Aspiro — Stream of Activity from friends. Design by Sans Colour."
-                                     class="fs-img project__img fs-standard-resolution fs-src-find-replace"
-                                     data-width="1800" data-height="1200" style="display: inline;"></figure>
-                        </div>
-                        <div class="row">
-                            <figure class="js-slide">
-                                <noscript> &lt;img src="//cdn.sanscolour.com/aspiro/04-small.jpg" alt="Aspiro — Interact
-                                    while watching."&gt; </noscript>
-                                <img src="./04-large(4).jpg"
-                                     data-src="//cdn.sanscolour.com/images/projects/aspiro/04-small.jpg"
-                                     alt="Aspiro — Interact while watching. Design by Sans Colour."
-                                     class="fs-img project__img fs-standard-resolution fs-src-find-replace"
-                                     data-width="1800" data-height="1200" style="display: inline;"></figure>
-                        </div>
-                        <div class="row">
-                            <figure class="js-slide">
-                                <noscript> &lt;img src="//cdn.sanscolour.com/aspiro/05-small.jpg" alt="Aspiro — Video On
-                                    Demand."&gt; </noscript>
-                                <img src="./05-large(4).jpg"
-                                     data-src="//cdn.sanscolour.com/images/projects/aspiro/05-small.jpg"
-                                     alt="Aspiro — Video On Demand. Design by Sans Colour."
-                                     class="fs-img project__img fs-standard-resolution fs-src-find-replace"
-                                     data-width="1800" data-height="1200" style="display: inline;"></figure>
-                        </div>
+                        <img src="images/manage1.png" alt="">
+                        <img src="images/manage2.png" alt="">
+                        <img src="images/manage3.png" alt="">
+                        <img src="images/manage4.png" alt="">
+                        <img src="images/manage5.png" alt="">
+                        <img src="images/manage6.png" alt="">
+                        <img src="images/manage8.png" alt="">
+                        <img src="images/manage9.png" alt="">
+                        <img src="images/manage10.png" alt="">
+                        <img src="images/manage11.png" alt="">
+                        <img src="images/manage12.png" alt="">
+                        <img src="images/manage13.png" alt="">
+                        <img src="images/manage14.png" alt="">
+                        <img src="images/manage15.png" alt="">
+                        <img src="images/manage16.png" alt="">
+                        <img src="images/manage17.png" alt="">
+
+
                     </div>
                 </div>
                 <div id="block--hintmag" class="js-block block project project--hintmag" data-block-id="hintmag">
